# pairs-trading-system

./: .env.example  .gitignore  README.md  portfolio.json  pyproject.toml
.github/workflows/: ci.yml
src/pairs_trading/: __init__.py  cli.py  paper.py  research.py
tests/: test_research.py
