[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
[project]
name = "pairs-trading-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["numpy>=2,<3", "pandas>=2.2,<3", "statsmodels>=0.14,<1", "yfinance>=0.2.50,<1", "python-dotenv>=1,<2"]
[project.scripts]
pairs-trading = "pairs_trading.cli:main"
[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
pythonpath = ["src"]
[tool.ruff]
line-length = 100
